[tool.poetry]
name = "purepress-arts"
version = "0.3.0"
description = "PurePress for Arts."
license = "MIT"
authors = ["Richard Chien <stdrc@outlook.com>"]
readme = "README.md"
repository = "https://github.com/richardchien/purepress-arts"
keywords = ["Static Blog Generator", "Static Blog", "Blog", "Blog Engine"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Flask",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
packages = [{ include = "purepress" }]

[tool.poetry.scripts]
purepress = "purepress.__main__:cli.main"

[tool.poetry.dependencies]
python = ">=3.6,<3.10"
Werkzeug = "~1.0.1"
Flask = "~1.1.2"
PyYAML = "~5.4.1"
click = "~7.1.2"
colorama = "~0.4.3"
Markdown = "~3.2.2"
py-gfm = "~1.0.0"
toml = "~0.10.2"
MarkupSafe = "~2.0.1"

[tool.poetry.dev-dependencies]
black = "~20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120
